--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install requests
+        python -m pip install beautifulsoup4
+        # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run ElecAlert
       run: |
         python ElecAlert_github.py
