--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install requests
         python -m pip install beautifulsoup4
+        python -m pip install lxml
         # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run ElecAlert
       run: |
